results/5b7dca8201fd3f22a6ac1e68f566d640/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 5b7dca8201fd3f22a6ac1e68f566d640, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
